trunk/Archive2/f9/8a749d4ecf09cb/main.cpp

int main () {
    float f, const c =9.9;
}
